0.16.2
	bugfix: IP address picker was broken
	bugfix: more message processing fixes
	new feature: "router" addresses allocations
	new feature: router configuration exporter
	update: 3 more switches in SNMP code by Walery Wysotsky
0.16.1 2008-07-30
	new feature: pre-assigned tags for new VS and RS pools records
	new feature: cache RackCode parse tree for better performance
	new feature: display tags inline for IPv4 and SLB data
	new feature: optionally remember the last tab for each page
	bugfix: don't escape Greek letters to enable them in tag names
	bugfix: port manager messages were incorrect
	bugfix: shorten URLs to enable longer message logs
	bugfix: added missing index to database
	update: adjusted database for bigger texts
	update: better "origin" highlighting for browsing
	update: merged Petr Kohts' highlight patch
	update: better tags in demo data
0.16.0 2008-07-09
	new feature: tag roller
	new feature: taggable user accounts
	new feature: RackCode configuration
	new feature: "my account" page
	update: page layout fixes and improvements
	update: dictionary updates
0.15.1 2008-06-05
	bugfix: fix auth headers in upgrade script (broken in 0.15.0)
	new feature: fetch switch serial number via SNMP (by killsystem)
	new feature: adding multiple racks
	new feature: IP address reservation release on allocation
	updates: user interface cleanups and improvements
0.15.0 2008-05-10
	new feature: tags
	new feature: automatic option groups
	new feature: rendered links in dictionary view
	new feature: trunk support in switchvlans gateway
	new feature: Tango icon set
	update: added Force10, NETGEAR, D-Link, 3Com  and Extreme Networks
		switches, Raisecom MUXes, updated Cisco routers
	update: async port type has been split
	update: don't allow duplicate rack names in one row
	update: internal help system has been dropped
	update: SSV format for RS import
	bugfix: handle "routed" switch ports
	bugfix: make switchvlans gateway work on Linux
0.14.12 2008-02-29