@@ -2,7 +2,8 @@
 	bugfix: IP address picker was broken
 	bugfix: more message processing fixes
 	new feature: "router" addresses allocations
-	new feature: router configuration exporter
+	new feature: support for local extensions
+	new feature: IPv4 networks hierarchy
 	update: 3 more switches in SNMP code by Walery Wysotsky
 0.16.1 2008-07-30
 	new feature: pre-assigned tags for new VS and RS pools records
